[metadata]
name = rhel-containers
author = Nikhil Dhandre
author-email = ndhandre@redhat.com
license_file = LICENSE
description = RHEL containers for Insights testing
url = https://github.com/digitronik/rhel-containers
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
zip_safe = False
setup_requires = setuptools_scm
include_package_data = True

# install_requires =

[options.extras_require]
test =
    pytest
    pytest-cov
dev =
    pre-commit
    pytest
    pytest-cov

[options.packages.find]
where = src

[flake8]
ignore = E128,E811,W503,E203
max-line-length = 100
